--- a/index.html
+++ b/index.html
@@ -3,12 +3,312 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Cymatt</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+<div class="hero-image">
+    <header>
+        <nav class="container">
+            <div class="logo">
+                <img src="./images/cytonnlogo.png" alt="">
+                <a href="#" onclick="toggleMenu()"><i class="fa fa-bars fa-2x"></i></a>
+            </div>
+            <ul id="nav-list">
+                <li><a href="#">Tiles</a></li>
+                <li><a href="#">Sanitary</a></li>
+                <li><a href="#">Electrical Fittings</a></li>
+                <li><a href="#">Light Fittings</a></li>
+                <li><a href="#">Iron Fittings</a></li>
+                <li><a href="#">Doors</a></li>
+                <li><a href="#">Kitchen</a></li>
+                <li><a href="#" class="services">Services</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#"><i class="fa fa-search"></i></a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="hero-text">
+        <h1>Affordable quality <br> lifestyle </h1>
+    </div>
+    <div class="see-more">
+        <p>See More</p>
+    </div>
+    <a href="#" class="left-circle">
+        <i class="fa fa-chevron-left"></i>
+    </a>
+    <a href="#" class="right-circle">
+        <i class="fa fa-chevron-right"></i>
+    </a>
+</div>
+<div class="collection">
+    <div class="container">
+        <div class="new-collection-title">NEW COLLECTION</div>
 
-<p>denno</p>
+        <div class="gallery_one">
+            <div class="biget image-item">
+                <img class="new-collection-img" src="./images/bidget.jpg" alt="sanitary biget">
+                <div class="overlay">
+                    <div class="center-text">
+                        <span class="first-txt">Sanitary</span>
+                        <span class="second-txt">Bidget</span>
+                    </div>
+                </div>
+            </div>
+            <div class="bathtub image-item">
+                <img class="new-collection-img" src="./images/bathtab.jpg" alt="sanitary bathtub">
+                <div class="overlay">
+                    <div class="center-text">
+                        <span class="first-txt">Sanitary</span>
+                        <span class="second-txt">Bathtubs</span>
+                    </div>
+                </div>
+            </div>
+            <div class="tiles image-item">
+                <img class="new-collection-img" src="./images/tiles.jpg" alt="ceramic tiles">
+                <div class="overlay">
+                    <div class="center-text">
+                        <span class="first-txt">Tiles</span>
+                        <span class="second-txt">Ceramic tiles</span>
+                    </div>
+                </div>
+            </div>
+            <div class="doors image-item">
+                <img class="new-collection-img" src="./images/flushdoor.jpeg" alt="flush doors">
+                <div class="overlay">
+                    <div class="center-text">
+                        <span class="first-txt">Sanitary</span>
+                        <span class="second-txt">Flush Door</span>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+
+    </div>
+</div>
+<div class="newprods">
+    <div class="container">
+        <div class="newprods-title">NEW PRODUCTS</div>
+        <div class="new-prod-gallery">
+            <div class="prd-item">
+                <div class="prod-img-item">
+                    <img class="new-prod-img" src="./images/newprods/bell.png" alt="">
+                    <div class="prod-overlay">
+                        <span class="overlay-text">View Product</span>
+                    </div>
+                </div>
+                <span class="txt-one">Schneider Electric Bell</span>
+                <span class="txt-two">Electrical Fittings</span>
+            </div>
+            <div class="prd-item">
+                <div class="prod-img-item">
+                    <img class="new-prod-img" src="./images/newprods/switch.jpeg" alt="">
+                    <div class="prod-overlay">
+                        <span class="overlay-text">View Product</span>
+                    </div>
+                </div>
+                <span class="txt-one">Philips Double Switch</span>
+                <span class="txt-two">Electrical Fittings</span>
+            </div>
+            <div class="prd-item">
+                <div class="prod-img-item">
+                    <img class="new-prod-img" src="./images/newprods/doublesiwtchone.jpeg" alt="">
+                    <div class="prod-overlay">
+                        <span class="overlay-text">View Product</span>
+                    </div>
+                </div>
+                <span class="txt-one">Philips Double Switch</span>
+                <span class="txt-two">Electrical Fittings</span>
+            </div>
+            <div class="prd-item">
+                <div class="prod-img-item">
+                    <img class="new-prod-img" src="./images/newprods/socket.jpeg" alt="">
+                    <div class="prod-overlay">
+                        <span class="overlay-text">View Product</span>
+                    </div>
+                </div>
+                <span class="txt-one">Philips Double Switch</span>
+                <span class="txt-two">Electrical Fittings</span>
+            </div>
+            <div class="prd-item">
+                <div class="prod-img-item">
+                    <img class="new-prod-img" src="./images/newprods/ceilinglight.jpeg" alt="">
+                    <div class="prod-overlay">
+                        <span class="overlay-text">View Product</span>
+                    </div>
+                </div>
+                <span class="txt-one">Schneider Electric Bell</span>
+                <span class="txt-two">Electrical Fittings</span>
+            </div>
+            <div class="prd-item">
+                <div class="prod-img-item">
+                    <img class="new-prod-img" src="./images/newprods/belltwo.jpeg" alt="">
+                    <div class="prod-overlay">
+                        <span class="overlay-text">View Product</span>
+                    </div>
+                </div>
+                <span class="txt-one">Schneider Electric Bell</span>
+                <span class="txt-two">Electrical Fittings</span>
+            </div>
+            <div class="prd-item">
+                <div class="prod-img-item">
+                    <img class="new-prod-img" src="./images/newprods/doubleswitchtwo.jpg" alt="">
+                    <div class="prod-overlay">
+                        <span class="overlay-text">View Product</span>
+                    </div>
+                </div>
+                <span class="txt-one">Schneider Electric Bell</span>
+                <span class="txt-two">Electrical Fittings</span>
+            </div>
+            <div class="prd-item">
+                <div class="prod-img-item">
+                    <img class="new-prod-img" src="./images/newprods/bellswitch.jpeg" alt="">
+                    <div class="prod-overlay">
+                        <span class="overlay-text">View Product</span>
+                    </div>
+                </div>
+                <span class="txt-one">Schneider Electric Bell</span>
+                <span class="txt-two">Electrical Fittings</span>
+            </div>
+        </div>
+        <div class="view-products-btn">View All Products</div>
+    </div>
+</div>
+<div class="interior-design">
+    <div class="container">
+        <div class="interior-design-gallery">
+            <div class="interior-design-item with-inner-txt">
+                <img class="interior-design-img" src="./images/interiordesign/bathroom.jpg" alt="">
+                <div class="inner-txt">
+                    <span class="interior-design-txt-one">Services</span>
+                    <span class="interior-design-txt-two">QUALITY INTERIOR <br> DESIGN</span>
+                    <span class="rotate">1</span>
+                </div>
+            </div>
+            <div class="interior-design-item without-inner-txt">
+                <img class="interior-design-img" src="./images/interiordesign/kitchen.jpg" alt="">
+            </div>
+            <div class="interior-design-item without-inner-txt">
+                <img class="interior-design-img" src="./images/interiordesign/sink.jpg" alt="">
+            </div>
+        </div>
+        <div class="more-prods-title">More Products</div>
+    </div>
+</div>
+<div class="our-partners">
+    <div class="container">
+        <div class="partners-title">OUR PARTNERS</div>
+
+        <div class="partner-images">
+            <div class="partner-img-item">
+                <img class="partner-img" src="./images/partners/kohler.png" alt="kohler">
+            </div>
+            <div class="partner-img-item">
+                <img class="partner-img" src="./images/partners/philips.png" alt="philips">
+            </div>
+            <div class="partner-img-item">
+                <img class="partner-img" src="./images/partners/duravit.png" alt="duravit">
+            </div>
+            <div class="partner-img-item">
+                <img class="partner-img" src="./images/partners/geberit.png" alt="geberit">
+            </div>
+            <div class="partner-img-item">
+                <img class="partner-img" src="./images/partners/crosswater.png" alt="crosswater">
+            </div>
+            <div class="partner-img-item">
+                <img class="partner-img" src="./images/partners/bisque.png" alt="bisque">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="newsletter">
+    <div class="container">
+        <div class="newsletter-items">
+            <div class="text-one">
+                Join Our newsletter
+            </div>
+            <div class="text-two">
+                Enter your mail and we'll keep you <br>
+                posted with news and updates!
+            </div>
+            <div class="send-mail-grid">
+                <table>
+                    <tr>
+                        <td colspan="2">
+                            <span>Your email</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span>Choose your country</span>
+                        </td>
+                        <td>
+                            <span>Send</span>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+<footer>
+    <div class="container">
+        <div class="top-footer">
+            <div class="top-footer-item">
+                <div class="top-footer-title">Cymatt</div>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services & Facilities</a></li>
+                </ul>
+            </div>
+            <div class="top-footer-item">
+                <div class="top-footer-title">Latest Products</div>
+                <ul>
+                    <li><a href="#">Tiles</a></li>
+                    <li><a href="#">WallPaper</a></li>
+                    <li><a href="#">Skills</a></li>
+                </ul>
+            </div>
+            <div class="top-footer-item">
+                <div class="top-footer-title">Get Help</div>
+                <ul>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">FAQ</a></li>
+                </ul>
+            </div>
+            <div class="top-footer-item">
+                <div class="top-footer-title">Sign up for our newsletter</div>
+                <div class="input">
+                    <input type="text" placeholder="Enter Email Address"><input type="submit" value="Sign Up">
+                </div>
+                <div class="follow-us">Follow Us</div>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="middle-footer">
+            <span class="flag-section"><img src="./images/footer/united-states.png" alt=""> <span class="country-txt">United States</span></span>
+            <span class="text-last">&copy; 2018 Cymatt Limited</span>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="bottom-footer">
+            <span>Privacy</span>
+            <span>Terms</span>
+            <span>Accessibility</span>
+            <span>Legal</span>
+            <span>Site Map</span>
+            <span>Site Feedback</span>
+        </div>
+    </div>
+</footer>
+<script src="./js/index.js"></script>
 </body>
 </html>
