--- a/home.html
+++ b/home.html
@@ -194,7 +194,25 @@
                 <img class="interior-design-img" src="./images/interiordesign/sink.jpg" alt="">
             </div>
         </div>
-
+        <div class="more-products-title">MORE PRODUCTS</div>
+        <div class="more-products-nav-btn-container">
+            <div class="more-products-wrapper">
+                <div class="more-products-item">
+                    <img class="more-products-image" src="./images/moreprods/wooden-floor.jpg" alt="wooden floor">
+                </div>
+                <div class="more-products-item">
+                    <img class="more-products-image" src="./images/moreprods/wall-light.jpg" alt="wall light">
+                </div>
+                <div class="more-products-item">
+                    <img class="more-products-image" src="./images/moreprods/white-door.jpg" alt="white door">
+                </div>
+                <div class="more-products-item">
+                    <img class="more-products-image" src="./images/moreprods/sofa.jpg" alt="sofa">
+                </div>
+            </div>
+            <span class="left-nav"><i class="fa fa-chevron-left"></i></span>
+            <span class="right-nav"><i class="fa fa-chevron-right"></i></span>
+        </div>
     </div>
 </div>
 <div class="our-partners">
