--- a/home.html
+++ b/home.html
@@ -14,19 +14,23 @@
                 <img src="./images/cytonnlogo.png" alt="">
                 <a href="#" onclick="toggleMenu()"><i class="fa fa-bars fa-2x"></i></a>
             </div>
-            <ul id="nav-list">
-                <li><a href="#">Tiles</a></li>
-                <li><a href="#">Sanitary</a></li>
-                <li><a href="#">Electrical Fittings</a></li>
-                <li><a href="#">Light Fittings</a></li>
-                <li><a href="#">Iron Fittings</a></li>
-                <li><a href="#">Doors</a></li>
-                <li><a href="#">Kitchen</a></li>
-                <li><a href="#" class="services">Services</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#"><i class="fa fa-search"></i></a></li>
-            </ul>
+            <div class="nav-links" id="nav-list">
+                <ul>
+                    <li><a href="#">Tiles</a></li>
+                    <li><a href="#">Sanitary</a></li>
+                    <li><a href="#">Electrical Fittings</a></li>
+                    <li><a href="#">Light Fittings</a></li>
+                    <li><a href="#">Iron Fittings</a></li>
+                    <li><a href="#">Doors</a></li>
+                    <li><a href="#" class="vertical-bar">Kitchen</a></li>
+                </ul>
+                <ul class="right-links">
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#"><i class="fa fa-search"></i></a></li>
+                </ul>
+            </div>
         </nav>
     </header>
     <div class="hero-text">
@@ -78,7 +82,7 @@
                 <img class="new-collection-img" src="./images/flushdoor.jpeg" alt="flush doors">
                 <div class="overlay">
                     <div class="center-text">
-                        <span class="first-txt">Sanitary</span>
+                        <span class="first-txt">Doors</span>
                         <span class="second-txt">Flush Door</span>
                     </div>
                 </div>
@@ -280,6 +284,12 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">Services & Facilities</a></li>
                 </ul>
+                <div class="top-footer-title bottom">For Your Home</div>
+                <ul>
+                    <li><a href="#">Kitchen</a></li>
+                    <li><a href="#">Living room</a></li>
+                    <li><a href="#">Out Door</a></li>
+                </ul>
             </div>
             <div class="top-footer-item">
                 <div class="top-footer-title">Latest Products</div>
@@ -287,6 +297,12 @@
                     <li><a href="#">Tiles</a></li>
                     <li><a href="#">WallPaper</a></li>
                     <li><a href="#">Skills</a></li>
+                </ul>
+
+                <div class="top-footer-title bottom">Accounts</div>
+                <ul>
+                    <li><a href="#">Accounts SignIn</a></li>
+                    <li><a href="#">Store</a></li>
                 </ul>
             </div>
             <div class="top-footer-item">
@@ -297,16 +313,18 @@
                 </ul>
             </div>
             <div class="top-footer-item">
-                <div class="top-footer-title">Sign up for our newsletter</div>
-                <div class="input">
-                    <input type="text" placeholder="Enter Email Address"><input type="submit" value="Sign Up">
-                </div>
-                <div class="follow-us">Follow Us</div>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-pinterest"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                <div class="form-item">
+                    <div class="top-footer-title">Sign up for our newsletter</div>
+                    <div class="input">
+                        <input type="text" placeholder="Enter Email Address"><input type="submit" value="Sign Up">
+                    </div>
+                    <div class="follow-us">Follow Us</div>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-pinterest"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
